--- a/resume-website/styles.css
+++ b/resume-website/styles.css
@@ -8,7 +8,7 @@
 body {
   font-family: "Georgia, serif";
   line-height: 1.6;
-  background: linear-gradient(to right,#ffffff,#dff4f9,#acf5f9, #befff9 );
+  background: linear-gradient(to right,#ffffff,#f2fbfc , #c9f4f8 , #a0eef7 );
 }
 
 ul {
@@ -21,7 +21,7 @@ a {
 }
 
 header {
-  background: linear-gradient(to right,#ffffff,#dff4f9,#acf5f9, #befff9 );
+  background: linear-gradient(to right,#ffffff,#f2fbfc , #c9f4f8 , #a0eef7 );
   color: #333;
   padding: 20px;
   text-align: center;
@@ -295,4 +295,20 @@ section form button:hover {
 
 .gallery-row-personal img:hover {
   transform: scale(1.3);
+}
+
+
+@media screen and (max-width: 600px) {
+  nav {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .toggle-nav {
+    display: block;
+  }
+
+  .nav-links {
+    display: none;
+  }
 }
